--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,8 +1,4 @@
-.li {
-    cursor: pointer;
-}
-
-.active{
-    text-decoration: underline;
-    font-weight: bold;
+#logo {
+    font-family: 'Permanent Marker', cursive;
+    color: white;
 }
